Progress on /probanno GET, DB refactor, /probanno/list, clear sessions, swagger
