# controllers/probanno_management.py
@@ -1,6 +1,9 @@
-from flask import request, abort, send_from_directory, render_template, jsonify
+import uuid
+
+from flask import request, abort, send_from_directory, render_template, jsonify, Response
 from redis import Redis
 from rq import Queue
+import traceback
 import probanno
 import session_management
 import data.database as db
@@ -29,15 +32,21 @@ probanno_queue = Queue(connection=Redis())
 
 
 def get_reaction_probabilities(app, fasta_id=None, fasta_file=None):
-    # we will permit sessions that are None to save reaction probabilities
     session = session_management.get_session_id()
     if session is None:
         abort(400)
     template = None
     if request.method == GET:
         fasta_id = request.args[FASTA_ID] if fasta_id is None else fasta_id
-        if fasta_id is None and FASTA in request.files:
-            utils.upload_file(app, request.files[FASTA])
+        # check cache
+        if fasta_id is not None and fasta_id != '':
+            likelihoods = db.find_probanno(fasta_id)
+            if likelihoods is not None:
+                job = Job(session, CALCULATE_PROBANNO_JOB, fasta_id, dummy=True)
+                db.insert_probanno_record(fasta_id, session, likelihoods[2])
+                job.status = COMPLETE
+                return jsonify(job.to_dict_dto())
+        # download fasta file from Uniprot and continue
         try:
             fasta_file = get_fasta_by_id(app, fasta_id) if fasta_file is None else fasta_file
         except probanno.FastaNotFoundError:
@@ -48,29 +57,22 @@ def get_reaction_probabilities(app, fasta_id=None, fasta_file=None):
         if fasta_id is None:
             abort(400)
         if FASTA in request.files:
-            fasta_file = utils.upload_file(app, request.files[FASTA])
+            fasta_file = app.config['UPLOAD_FOLDER'] + utils.upload_file(app, request.files[FASTA])
         else:
             abort(400)
         template = request.form[TEMPLATE] if TEMPLATE in request.form else DEFAULT_TEMPLATE
     template_file = TEMPLATE_FILES[template] if template in TEMPLATE_FILES else TEMPLATE_FILES[DEFAULT_TEMPLATE]
-    likelihoods = None
-    if request.method == GET and fasta_id is not None and fasta_id != '':
-        likelihoods = db.find_by_id(db.PROBANNO, fasta_id)
-        if likelihoods is not None:
-            job = Job(session, CALCULATE_PROBANNO_JOB, fasta_id, dummy=True)
-            job.status = COMPLETE
-            return jsonify(job.to_dict_dto())
     gen_id = request.args[FASTA_ID] if FASTA_ID in request.args and request.args[FASTA_ID] is not None else fasta_file
-    filename = app.config['UPLOAD_FOLDER'] + fasta_file
+    fasta_name = get_name_from_fasta(fasta_file)
     template_model_file = app.config['MODEL_TEMPLATES'] + template_file
     job = Job(session, CALCULATE_PROBANNO_JOB, fasta_id)
     probanno_queue.enqueue(_async_get_reaction_probabilities,
-                           job, fasta_id, session, fasta_file, template_model_file, gen_id,
+                           job, fasta_id, fasta_name, session, fasta_file, template_model_file, gen_id,
                            job_id=job.id, timeout=600)
     return jsonify(get_job(job.id).to_dict_dto())
 
 
-def _async_get_reaction_probabilities(job, fasta_id, session, file_name, template_model_file, genome_id):
+def _async_get_reaction_probabilities(job, fasta_id, fasta_name, session, file_name, template_model_file, genome_id):
     # seperation needed so that DB insertion an happen as job completes
     try:
         job.start()
@@ -78,11 +80,12 @@ def _async_get_reaction_probabilities(job, fasta_id, session, file_name, templat
                                                                template_model_file=template_model_file,
                                                                genome_id=genome_id)
         if fasta_id is not None and fasta_id != '':
-            db.insert_probanno(fasta_id, session, likelihoods.to_json())
+            db.insert_probanno(fasta_id, fasta_name, session, str(uuid.uuid4()), likelihoods.to_json())
         job.complete()
         return likelihoods.to_json()
     except BaseException as e:
-        print(e)
+        print(e.message)
+        traceback.print_exc()
         job.fail()
     finally:
         print('Job ' + job.id + ' has terminated.')
@@ -98,7 +101,11 @@ def get_fasta_by_id(app, fasta_id):
 
 
 def list_probannos():
-    return json.dumps(db.list_probannos())
+    session = session_management.get_session_id()
+    if session is None:
+        abort(400)
+    probs = [{'fasta_id': p[0], 'name': p[1]} for p in db.list_probannos(session)]
+    return jsonify(probs)
 
 
 def download_probanno(app):
@@ -129,7 +136,12 @@ def retrieve_probanno():
     fasta_id = request.args[FASTA_ID] if FASTA_ID in request.args else None
     if fasta_id is None or fasta_id == '':
         abort(400)
-    likelihoods = db.find_probanno(session, fasta_id)
+    likelihoods = db.retrieve_probanno(session, fasta_id)
     if likelihoods is None:
         abort(404)
-    return jsonify(likelihoods[-1])
+    return Response(likelihoods[-2], mimetype='application/json')
+
+
+def get_name_from_fasta(fasta_file):
+    with open(fasta_file) as f:
+        return f.readlines()[0].split('OS=')[-1].split('GN=')[0].strip()
