# swagger-yaml/swagger.yaml
@@ -127,6 +127,32 @@ paths:
           description: "Bad or missing session"
         404:
           description: "FASTA not found"
+  /probanno/list:
+    get:
+      tags:
+      - "probanno"
+      summary: "List calculated reaction likelihoods"
+      description: "List reaction likelihoods calculated within this session. Only includes likelihoods associated with
+        COMPLETE jobs, not failures or in progress jobs."
+      operationId: "listLikelihoods"
+      produces:
+      - "application/json"
+      parameters:
+      - name: "session_id"
+        in: "header"
+        description: "Session associated with the job in which they were calculated"
+        required: true
+      responses:
+        200:
+          description: "successful operation"
+          schema:
+            type: array
+            items:
+              $ref: "#/definitions/LikelihoodSummary"
+        400:
+          description: "Bad or missing session"
+        404:
+          description: "FASTA not found"
   /pet/findByStatus:
     get:
       tags:
@@ -426,7 +452,7 @@ paths:
         description: "Created user object"
         required: true
         schema:
-          $ref: "#/definitions/User"
+          $ref: "#/definitions/Probanno"
       responses:
         default:
           description: "successful operation"
@@ -446,7 +472,7 @@ paths:
         schema:
           type: "array"
           items:
-            $ref: "#/definitions/User"
+            $ref: "#/definitions/Probanno"
       responses:
         default:
           description: "successful operation"
@@ -466,7 +492,7 @@ paths:
         schema:
           type: "array"
           items:
-            $ref: "#/definitions/User"
+            $ref: "#/definitions/Probanno"
       responses:
         default:
           description: "successful operation"
@@ -535,7 +561,7 @@ paths:
         200:
           description: "successful operation"
           schema:
-            $ref: "#/definitions/User"
+            $ref: "#/definitions/Probanno"
         400:
           description: "Invalid username supplied"
         404:
@@ -559,7 +585,7 @@ paths:
         description: "Updated user object"
         required: true
         schema:
-          $ref: "#/definitions/User"
+          $ref: "#/definitions/Probanno"
       responses:
         400:
           description: "Invalid user supplied"
@@ -653,16 +679,15 @@ definitions:
         description: "User Status"
     xml:
       name: "User"
-  Tag:
+  LikelihoodSummary:
     type: "object"
     properties:
-      id:
-        type: "integer"
-        format: "int64"
+      fasta_id:
+        type: "string"
+        example: "267377"
       name:
         type: "string"
-    xml:
-      name: "Tag"
+        example: "Methanococcus maripaludis S2"
   Pet:
     type: "object"
     required:
@@ -690,7 +715,7 @@ definitions:
           name: "tag"
           wrapped: true
         items:
-          $ref: "#/definitions/Tag"
+          $ref: "#/definitions/LikelihoodSummary"
       status:
         type: "string"
         description: "pet status in the store"
